# railgun-indexer

./: .gitignore  Cargo.toml  README.md  config.railgun-indexer.example.yaml
bins/railgun-indexer/: Cargo.toml
bins/railgun-indexer/src/: chain_indexed.rs  main.rs  scheduler_tests.rs
bins/railgun-indexer/tests/compat/released-poi-client/: Cargo.toml  released_poi_client.rs
bins/railgun-indexer/tests/fixtures/: released-alpha-poi-manifest-v1.json
bins/railgun-indexer/tests/fixtures/released-client-v3/: blocked.json  manifest.json
crates/railgun-indexer-core/: Cargo.toml
crates/railgun-indexer-core/src/: audit.rs  blocked.rs  chain_indexer.rs  chain_logs.rs  chunk.rs  commitments.rs  config.rs  indexed_manifest.rs  lib.rs  manifest.rs  merkle_checkpoint.rs  poi_v4.rs  public_txid.rs  publication_sequence.rs  status.rs  store.rs  verify.rs  wallet_scan.rs
crates/railgun-indexer-core/src/publish/: ipfs.rs  ipns.rs  mod.rs
crates/railgun-indexer-core/src/scrape/: mod.rs  orchestrator.rs  page_size.rs  retry.rs  worker.rs
crates/railgun-indexer-core/src/snapshot/: format.rs  lifecycle.rs  mod.rs
crates/railgun-indexer-core/tests/: ipns_dht.rs  lifecycle.rs  migrations.rs  mock_upstream.rs  rpc_log_indexing.rs
docs/: poi-snapshot-format.md  railgun-indexer-production-validation.md
scripts/: watch-chain-catchup.sh
